# EmoVision

./: .gitignore  AGENTS.md  README.md
backend/: AGENTS.md  pyproject.toml  requirements.txt
backend/app/: AGENTS.md  __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py  pipeline_controller.py
backend/app/api/routes/: __init__.py  config.py  pipeline.py  source.py  websocket.py
backend/app/core/: __init__.py  pipeline.py  session.py  source_manager.py
backend/app/modules/: AGENTS.md  __init__.py  base.py
backend/app/modules/detector/: __init__.py  base_detector.py  schemas.py  yolo_detector.py
backend/app/modules/recognizer/: __init__.py  base_recognizer.py  caer_recognizer.py  dden_recognizer.py  emotic_recognizer.py  matching.py  mock_recognizer.py  model_builders.py  preprocessing.py  schemas.py
backend/app/modules/temporal/: __init__.py  bbox_smoother.py  emotion_fusion.py  label_policy.py  one_euro_filter.py  track_state.py  tracker.py
backend/app/modules/visualizer/: __init__.py  frame_renderer.py  schemas.py
backend/app/schemas/: __init__.py  common.py  pipeline.py  websocket.py
backend/app/utils/: __init__.py  device.py  frame_utils.py  logger.py
backend/models/: README.md  clip.py  dden.py  densenet.py  emotic.py  fer_cnn.py  inception_resnet_v1.py  project_head.py  weight_utils.py
backend/tests/: test_pipeline.py  test_utils.py  test_utils_imports.py
frontend/: .eslintrc.json  AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: AGENTS.md  App.tsx
frontend/src/hooks/: index.ts  (+4 more)
(+40 files in other folders)
